--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -58,7 +58,6 @@ file.reference.rs2xml.jar=C:\\Users\\albin\\Downloads\\APLIKASI PENJUALAN BARANG
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}:\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.JTattoo-1.6.11.jar}:\
     ${file.reference.commons-beanutils-1.8.2-sources.jar}:\
@@ -87,7 +86,8 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.mysql-connector-java-5.1.18-bin.jar}:\
     ${libs.beans-binding.classpath}:\
-    ${libs.myjaspaper.classpath}
+    ${libs.myjaspaper.classpath}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
