--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,12 +29,20 @@ dist.jar=${dist.dir}/aplikasi-sidoma.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.com.lowagie.text-2.1.7.jar=C:\\Users\\albin\\Documents\\NetBeansProjects\\library\\new\\com.lowagie.text-2.1.7.jar
+file.reference.commons-beanutils-1.8.0-javadoc.jar=C:\\Users\\albin\\Documents\\NetBeansProjects\\library\\new\\commons-beanutils-1.8.0-javadoc.jar
+file.reference.commons-beanutils-1.8.0-sources.jar=C:\\Users\\albin\\Documents\\NetBeansProjects\\library\\new\\commons-beanutils-1.8.0-sources.jar
+file.reference.commons-beanutils-1.8.0.jar=C:\\Users\\albin\\Documents\\NetBeansProjects\\library\\new\\commons-beanutils-1.8.0.jar
 file.reference.commons-beanutils-1.8.2-sources.jar=C:\\Users\\albin\\Downloads\\APLIKASI PENJUALAN BARANG\\NEW_UJI_LEVEL\\ALL JASPER\\commons-beanutils-1.8.2-sources.jar
 file.reference.commons-beanutils-1.8.2-sources.jar-1=C:\\Users\\albin\\Documents\\NetBeansProjects\\ALL JASPER\\commons-beanutils-1.8.2-sources.jar
+file.reference.commons-beanutils-bean-collections-1.8.0.jar=C:\\Users\\albin\\Documents\\NetBeansProjects\\library\\new\\commons-beanutils-bean-collections-1.8.0.jar
+file.reference.commons-beanutils-core-1.8.0.jar=C:\\Users\\albin\\Documents\\NetBeansProjects\\library\\new\\commons-beanutils-core-1.8.0.jar
+file.reference.commons-collections-2.1.1.jar=C:\\Users\\albin\\Documents\\NetBeansProjects\\library\\new\\commons-collections-2.1.1.jar
 file.reference.commons-collections-3.2.1.jar=C:\\Users\\albin\\Downloads\\APLIKASI PENJUALAN BARANG\\NEW_UJI_LEVEL\\ALL JASPER\\commons-collections-3.2.1.jar
 file.reference.commons-collections-3.2.1.jar-1=C:\\Users\\albin\\Documents\\NetBeansProjects\\ALL JASPER\\commons-collections-3.2.1.jar
-file.reference.commons-digester-1.7.jar=C:\\Users\\albin\\Downloads\\APLIKASI PENJUALAN BARANG\\NEW_UJI_LEVEL\\ALL JASPER\\commons-digester-1.7.jar
-file.reference.commons-digester-1.7.jar-1=C:\\Users\\albin\\Documents\\NetBeansProjects\\ALL JASPER\\commons-digester-1.7.jar
+file.reference.commons-digester-2.1.jar=C:\\Users\\albin\\Documents\\NetBeansProjects\\library\\commons-digester-2.1.jar
+file.reference.commons-digester-2.1.jar-1=C:\\Users\\albin\\Documents\\NetBeansProjects\\library\\new\\commons-digester-2.1.jar
+file.reference.commons-logging-1.1.1-api.jar=C:\\Users\\albin\\Documents\\NetBeansProjects\\library\\new\\commons-logging-1.1.1-api.jar
 file.reference.commons-logging-1.1.1.jar=C:\\Users\\albin\\Downloads\\APLIKASI PENJUALAN BARANG\\NEW_UJI_LEVEL\\ALL JASPER\\commons-logging-1.1.1.jar
 file.reference.commons-logging-1.1.1.jar-1=C:\\Users\\albin\\Documents\\NetBeansProjects\\ALL JASPER\\commons-logging-1.1.1.jar
 file.reference.groovy-all-2.0.1.jar=C:\\Users\\albin\\Downloads\\APLIKASI PENJUALAN BARANG\\NEW_UJI_LEVEL\\ALL JASPER\\groovy-all-2.0.1.jar
@@ -48,13 +56,17 @@ file.reference.jasperreports-fonts-6.5.0.jar-1=C:\\Users\\albin\\Documents\\NetB
 file.reference.jasperreports-javaflow-6.5.0.jar=C:\\Users\\albin\\Downloads\\APLIKASI PENJUALAN BARANG\\NEW_UJI_LEVEL\\ALL JASPER\\jasperreports-javaflow-6.5.0.jar
 file.reference.jasperreports-javaflow-6.5.0.jar-1=C:\\Users\\albin\\Documents\\NetBeansProjects\\ALL JASPER\\jasperreports-javaflow-6.5.0.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\albin\\Documents\\NetBeansProjects\\ALL JASPER\\jcalendar-1.4.jar
+file.reference.jcommon-1.0.15.jar=C:\\Users\\albin\\Documents\\NetBeansProjects\\library\\new\\jcommon-1.0.15.jar
 file.reference.jcommon-1.0.17.jar=C:\\Users\\albin\\Downloads\\APLIKASI PENJUALAN BARANG\\NEW_UJI_LEVEL\\ALL JASPER\\jcommon-1.0.17.jar
+file.reference.jdt-compiler-3.1.1.jar=C:\\Users\\albin\\Documents\\NetBeansProjects\\library\\new\\jdt-compiler-3.1.1.jar
 file.reference.jfreechart-1.0.13.jar=C:\\Users\\albin\\Downloads\\APLIKASI PENJUALAN BARANG\\NEW_UJI_LEVEL\\ALL JASPER\\jfreechart-1.0.13.jar
 file.reference.JTattoo-1.6.11.jar=C:\\Users\\albin\\Downloads\\APLIKASI PENJUALAN BARANG\\NEW_UJI_LEVEL\\ALL JASPER\\JTattoo-1.6.11.jar
 file.reference.JTattoo-1.6.11.jar-1=C:\\Users\\albin\\Documents\\NetBeansProjects\\ALL JASPER\\JTattoo-1.6.11.jar
 file.reference.mysql-connector-java-5.1.18-bin.jar=C:\\Users\\albin\\Documents\\NetBeansProjects\\IReport\\mysql-connector-java-5.1.18-bin.jar
 file.reference.poi-ooxml-3.9.jar=C:\\Users\\albin\\Downloads\\APLIKASI PENJUALAN BARANG\\NEW_UJI_LEVEL\\ALL JASPER\\poi-ooxml-3.9.jar
 file.reference.rs2xml.jar=C:\\Users\\albin\\Downloads\\APLIKASI PENJUALAN BARANG\\NEW_UJI_LEVEL\\ALL JASPER\\rs2xml.jar
+file.reference.swing-worker-1.1.jar=C:\\Users\\albin\\Documents\\NetBeansProjects\\library\\new\\swing-worker-1.1.jar
+file.reference.swingx-1.6.1.jar=C:\\Users\\albin\\Documents\\NetBeansProjects\\library\\new\\swingx-1.6.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -62,7 +74,6 @@ javac.classpath=\
     ${file.reference.JTattoo-1.6.11.jar}:\
     ${file.reference.commons-beanutils-1.8.2-sources.jar}:\
     ${file.reference.commons-collections-3.2.1.jar}:\
-    ${file.reference.commons-digester-1.7.jar}:\
     ${file.reference.commons-logging-1.1.1.jar}:\
     ${file.reference.groovy-all-2.0.1.jar}:\
     ${file.reference.jasper-compiler-jdt-5.5.23.jar}:\
@@ -76,7 +87,6 @@ javac.classpath=\
     ${file.reference.JTattoo-1.6.11.jar-1}:\
     ${file.reference.commons-beanutils-1.8.2-sources.jar-1}:\
     ${file.reference.commons-collections-3.2.1.jar-1}:\
-    ${file.reference.commons-digester-1.7.jar-1}:\
     ${file.reference.commons-logging-1.1.1.jar-1}:\
     ${file.reference.groovy-all-2.0.1.jar-1}:\
     ${file.reference.jasper-compiler-jdt-5.5.23.jar-1}:\
@@ -87,7 +97,21 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.18-bin.jar}:\
     ${libs.beans-binding.classpath}:\
     ${libs.myjaspaper.classpath}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.com.lowagie.text-2.1.7.jar}:\
+    ${file.reference.commons-beanutils-1.8.0-javadoc.jar}:\
+    ${file.reference.commons-beanutils-1.8.0-sources.jar}:\
+    ${file.reference.commons-beanutils-1.8.0.jar}:\
+    ${file.reference.commons-beanutils-bean-collections-1.8.0.jar}:\
+    ${file.reference.commons-beanutils-core-1.8.0.jar}:\
+    ${file.reference.commons-collections-2.1.1.jar}:\
+    ${file.reference.commons-digester-2.1.jar-1}:\
+    ${file.reference.commons-logging-1.1.1-api.jar}:\
+    ${file.reference.jcommon-1.0.15.jar}:\
+    ${file.reference.jdt-compiler-3.1.1.jar}:\
+    ${file.reference.swing-worker-1.1.jar}:\
+    ${file.reference.swingx-1.6.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
