--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,19 +1,44 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
-file.reference.commons-beanutils-1.8.2-sources.jar=C:\\Users\\albin\\Documents\\NetBeansProjects\\ALL JASPER\\commons-beanutils-1.8.2-sources.jar
-file.reference.commons-collections-3.2.1.jar=C:\\Users\\albin\\Documents\\NetBeansProjects\\ALL JASPER\\commons-collections-3.2.1.jar
-file.reference.commons-logging-1.1.1.jar=C:\\Users\\albin\\Documents\\NetBeansProjects\\ALL JASPER\\commons-logging-1.1.1.jar
-file.reference.groovy-all-2.0.1.jar=C:\\Users\\albin\\Documents\\NetBeansProjects\\ALL JASPER\\groovy-all-2.0.1.jar
-file.reference.jasper-compiler-jdt-5.5.23.jar=C:\\Users\\albin\\Documents\\NetBeansProjects\\ALL JASPER\\jasper-compiler-jdt-5.5.23.jar
-file.reference.jasperreports-6.4.1.jar=C:\\Users\\albin\\Documents\\NetBeansProjects\\ALL JASPER\\jasperreports-6.4.1.jar
-file.reference.jasperreports-fonts-6.5.0.jar=C:\\Users\\albin\\Documents\\NetBeansProjects\\ALL JASPER\\jasperreports-fonts-6.5.0.jar
-file.reference.jasperreports-javaflow-6.5.0.jar=C:\\Users\\albin\\Documents\\NetBeansProjects\\ALL JASPER\\jasperreports-javaflow-6.5.0.jar
-file.reference.jcommon-1.0.17.jar=C:\\Users\\albin\\Documents\\NetBeansProjects\\ALL JASPER\\jcommon-1.0.17.jar
-file.reference.jfreechart-1.0.13.jar=C:\\Users\\albin\\Documents\\NetBeansProjects\\ALL JASPER\\jfreechart-1.0.13.jar
-file.reference.JTattoo-1.6.11.jar=C:\\Users\\albin\\Documents\\NetBeansProjects\\ALL JASPER\\JTattoo-1.6.11.jar
-file.reference.poi-ooxml-3.9.jar=C:\\Users\\albin\\Documents\\NetBeansProjects\\ALL JASPER\\poi-ooxml-3.9.jar
-file.reference.rs2xml.jar=C:\\Users\\albin\\Documents\\NetBeansProjects\\ALL JASPER\\rs2xml.jar
+file.reference.com.lowagie.text-2.1.7.jar=C:\\Users\\albin\\Documents\\aplikasi-sidoma\\com.lowagie.text-2.1.7.jar
+file.reference.commons-beanutils-1.8.0-javadoc.jar=C:\\Users\\albin\\Documents\\aplikasi-sidoma\\commons-beanutils-1.8.0-javadoc.jar
+file.reference.commons-beanutils-1.8.0-sources.jar=C:\\Users\\albin\\Documents\\aplikasi-sidoma\\commons-beanutils-1.8.0-sources.jar
+file.reference.commons-beanutils-1.8.0.jar=C:\\Users\\albin\\Documents\\aplikasi-sidoma\\commons-beanutils-1.8.0.jar
+file.reference.commons-beanutils-1.8.2-sources.jar=C:\\Users\\albin\\Documents\\aplikasi-sidoma\\commons-beanutils-1.8.2.jar
+file.reference.commons-beanutils-1.8.2-sources.jar-1=C:\\Users\\albin\\Documents\\aplikasi-sidoma\\commons-beanutils-1.8.2.jar
+file.reference.commons-beanutils-bean-collections-1.8.0.jar=C:\\Users\\albin\\Documents\\aplikasi-sidoma\\commons-beanutils-bean-collections-1.8.0.jar
+file.reference.commons-beanutils-core-1.8.0.jar=C:\\Users\\albin\\Documents\\aplikasi-sidoma\\commons-beanutils-core-1.8.0.jar
+file.reference.commons-collections-2.1.1.jar=C:\\Users\\albin\\Documents\\aplikasi-sidoma\\commons-collections-2.1.1.jar
+file.reference.commons-collections-3.2.1.jar=C:\\Users\\albin\\Documents\\aplikasi-sidoma\\commons-collections-3.2.1.jar
+file.reference.commons-collections-3.2.1.jar-1=C:\\Users\\albin\\Documents\\aplikasi-sidoma\\commons-collections-3.2.1.jar
+file.reference.commons-digester-2.1.jar=C:\\Users\\albin\\Documents\\aplikasi-sidoma\\commons-digester-2.1.jar
+file.reference.commons-digester-2.1.jar-1=C:\\Users\\albin\\Documents\\aplikasi-sidoma\\commons-digester-2.1.jar
+file.reference.commons-logging-1.1.1-api.jar=C:\\Users\\albin\\Documents\\aplikasi-sidoma\\commons-logging-1.1.1-api.jar
+file.reference.commons-logging-1.1.1.jar=C:\\Users\\albin\\Documents\\aplikasi-sidoma\\commons-logging-1.1.1-api.jar
+file.reference.commons-logging-1.1.1.jar-1=C:\\Users\\albin\\Documents\\aplikasi-sidoma\\commons-logging-1.1.1.jar
+file.reference.groovy-all-2.0.1.jar=C:\\Users\\albin\\Documents\\aplikasi-sidoma\\groovy-all-2.0.1.jar
+file.reference.groovy-all-2.0.1.jar-1=C:\\Users\\albin\\Documents\\aplikasi-sidoma\\groovy-all-2.0.1.jar
+file.reference.jasper-compiler-jdt-5.5.23.jar=C:\\Users\\albin\\Documents\\aplikasi-sidoma\\jasper-compiler-jdt-5.5.23.jar
+file.reference.jasper-compiler-jdt-5.5.23.jar-1=C:\\Users\\albin\\Documents\\aplikasi-sidoma\\jasper-compiler-jdt-5.5.23.jar
+file.reference.jasperreports-6.4.1.jar=C:\\Users\\albin\\Documents\\aplikasi-sidoma\\jasperreports-6.4.1.jar
+file.reference.jasperreports-6.4.1.jar-1=C:\\Users\\albin\\Documents\\aplikasi-sidoma\\jasperreports-6.4.1.jar
+file.reference.jasperreports-fonts-6.5.0.jar=C:\\Users\\albin\\Documents\\aplikasi-sidoma\\jasperreports-fonts-6.5.0.jar
+file.reference.jasperreports-fonts-6.5.0.jar-1=C:\\Users\\albin\\Documents\\aplikasi-sidoma\\jasperreports-fonts-6.5.0.jar
+file.reference.jasperreports-javaflow-6.5.0.jar=C:\\Users\\albin\\Documents\\aplikasi-sidoma\\jasperreports-javaflow-6.5.0.jar
+file.reference.jasperreports-javaflow-6.5.0.jar-1=C:\\Users\\albin\\Documents\\aplikasi-sidoma\\jasperreports-javaflow-6.5.0.jar
+file.reference.jcalendar-1.4.jar=C:\\Users\\albin\\Documents\\aplikasi-sidoma\\jcalendar-1.4.jar
+file.reference.jcommon-1.0.15.jar=C:\\Users\\albin\\Documents\\aplikasi-sidoma\\jcommon-1.0.15.jar
+file.reference.jcommon-1.0.17.jar=C:\\Users\\albin\\Documents\\aplikasi-sidoma\\jcommon-1.0.17.jar
+file.reference.jdt-compiler-3.1.1.jar=C:\\Users\\albin\\Documents\\aplikasi-sidoma\\jdt-compiler-3.1.1.jar
+file.reference.jfreechart-1.0.13.jar=C:\\Users\\albin\\Documents\\aplikasi-sidoma\\jfreechart-1.0.13.jar
+file.reference.JTattoo-1.6.11.jar=C:\\Users\\albin\\Documents\\aplikasi-sidoma\\JTattoo-1.6.11.jar
+file.reference.JTattoo-1.6.11.jar-1=C:\\Users\\albin\\Documents\\aplikasi-sidoma\\JTattoo-1.6.11.jar
+file.reference.mysql-connector-java-5.1.18-bin.jar=C:\\Users\\albin\\Documents\\aplikasi-sidoma\\mysql-connector-java-5.1.18-bin.jar
+file.reference.poi-ooxml-3.9.jar=C:\\Users\\albin\\Documents\\aplikasi-sidoma\\poi-ooxml-3.9.jar
+file.reference.rs2xml.jar=C:\\Users\\albin\\Documents\\aplikasi-sidoma\\rs2xml.jar
+file.reference.swing-worker-1.1.jar=C:\\Users\\albin\\Documents\\aplikasi-sidoma\\swing-worker-1.1.jar
+file.reference.swingx-1.6.1.jar=C:\\Users\\albin\\Documents\\aplikasi-sidoma\\swingx-1.6.1.jar
 javac.debug=true
 javadoc.preview=true
 user.properties.file=C:\\Users\\albin\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
